--- a/package.json
+++ b/package.json
@@ -14,7 +14,9 @@
     "@apollo/server": "^4.11.0",
     "@types/cors": "^2.8.17",
     "bcryptjs": "^2.4.3",
+    "class-validator": "^0.14.1",
     "cors": "^2.8.5",
+    "dataloader": "^2.2.2",
     "dotenv": "^16.4.5",
     "express": "^4.21.1",
     "graphql": "^16.9.0",
